<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue"
    tools:context=".StartActivity">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginBottom="@dimen/medium_margin"
            android:src="@drawable/mathquiz"
            android:contentDescription="@string/kids_match_exam" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/view_background_layout">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                android:id="@+id/kidsCardView"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true"
                android:tag="@string/kids"
                app:cardElevation="10dp"
                android:onClick="runCardView"
                app:cardCornerRadius="16dp" >

                <LinearLayout
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:paddingTop="10dp"
                    android:background="@color/green"

                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/imageKids"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:src="@drawable/kids"
                        app:civ_border_width="2dp"
                        app:civ_border_color="@color/orange"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textAlignment="center"
                        android:textColor="@color/orange"
                        android:textStyle="bold"
                        android:textSize="@dimen/larger_menu_text_size"
                        android:text="@string/kids">

                    </TextView>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/adultsCardView"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true"
                android:tag="@string/adults"
                android:clickable="true"
                android:onClick="runCardView"
                app:cardElevation="10dp"
                app:cardCornerRadius="16dp" >

                <LinearLayout
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:paddingTop="10dp"
                    android:background="@color/purple_200"

                    android:orientation="vertical">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:src="@drawable/adult"
                        app:civ_border_width="2dp"
                        app:civ_border_color="@color/gray"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textAlignment="center"
                        android:textColor="@color/dark_gray"
                        android:textStyle="bold"
                        android:textSize="@dimen/larger_menu_text_size"
                        android:text="@string/adults">

                    </TextView>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                android:id="@+id/advancedCardView"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true"
                android:clickable="true"
                android:onClick="runCardView"
                android:tag="@string/advanced"
                app:cardElevation="10dp"
                app:cardCornerRadius="16dp" >

                <LinearLayout
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:paddingTop="10dp"
                    android:background="@color/light_yellow"

                    android:orientation="vertical">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:src="@drawable/advanced"
                        app:civ_border_width="2dp"
                        app:civ_border_color="@color/blue"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textAlignment="center"
                        android:textColor="@color/blue"
                        android:textStyle="bold"
                        android:textSize="@dimen/larger_menu_text_size"
                        android:text="@string/advanced">

                    </TextView>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/geniusCardView"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true"
                app:cardElevation="10dp"
                android:clickable="true"
                android:onClick="runCardView"
                android:tag="@string/genius"
                app:cardCornerRadius="16dp" >

                <LinearLayout
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:paddingTop="10dp"
                    android:background="@color/blue"

                    android:orientation="vertical">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:src="@drawable/genius"
                        app:civ_border_width="2dp"
                        app:civ_border_color="@color/orange_red"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textAlignment="center"
                        android:textColor="@color/orange_red"
                        android:textStyle="bold"
                        android:textSize="@dimen/larger_menu_text_size"
                        android:text="@string/genius">

                    </TextView>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>